# wpdev

./: CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: build.yml
frontend/: package.json
src/: lib.rs  main.rs
src/api/: routes.rs
src/config/: loader.rs
src/docker/: config.rs  manager.rs  mod.rs
wpdev_api/: Cargo.toml
wpdev_api/src/: main.rs  routes.rs
wpdev_cli/: Cargo.toml
wpdev_cli/src/: commands.rs  main.rs
wpdev_core/: Cargo.toml
wpdev_core/src/: config.rs  docker_service.rs  lib.rs  utils.rs
wpdev_core/src/docker/: config.rs  container.rs  instance.rs  mod.rs
wpdev_frontend/: Cargo.toml  README.md  index.html  package-lock.json  package.json
wpdev_frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
wpdev_frontend/app/components/: Container.tsx  ControlButtons.tsx  FaIcon.tsx  Instance.tsx
wpdev_frontend/app/icons/: Icon.tsx  icons.tsx
wpdev_frontend/app/types/: globalTypes.ts
wpdev_frontend/src/: api.rs  handlers.rs  main.rs
wpdev_frontend/src/lib/: types.js
wpdev_frontend/static/: style.css
wpdev_frontend/templates/: index.html.tera  instance.html  instance.html.tera  instances.html  instances.html.tera
wpdev_frontend_js/app/: globals.css  page.module.css
