[package]
name = "wp-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.10"
config = "0.13.4"
futures = "0.3.29"
log = "0.4.20"
rocket = {version = "0.5.0", features = ["json"]}
serde_json = "1.0.108"
shiplift = "0.7.0"
tokio = "1.34.0"
