[package]
name = "wpdev_api"
version = "0.1.0"
edition = "2021"

[dependencies]
wpdev_core = { path = "../wpdev_core" }
rocket = {version = "0.5.0", features = ["json"]}
ws = { package = "rocket_ws", version = "0.1.0" }
shiplift = "0.7.0"
log = "0.4.20"
futures = "0.3.29"
tokio = "1.34.0"
anyhow = "1.0.75"
serde = "1.0.193"
serde_json = "1.0.108"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
