[package]
name = "wpdev_api"
version = "0.2.0"
edition = "2021"

[dependencies.wpdev_core]
path = "../wpdev_core"

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
ws = { package = "rocket_ws", version = "0.1.0" }
log = "0.4.20"
tokio = "1.34.0"
anyhow = "1.0.75"
serde = "1.0.193"
serde_json = "1.0.108"
rocket_cors = "0.6.0"
bollard = "0.16.0"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
