[package]
name = "wpdev_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.4.10"
anyhow = "1.0.75"
wpdev_core = { path = "../wpdev_core" }
tokio = "1.34.0"
shiplift = "0.7.0"
log = "0.4.20"
serde_json = "1.0.108"
prettytable-rs = "0.10.0"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
