[package]
name = "wpdev_cli"
version = "0.1.0"
edition = "2021"

[dependencies.wpdev_core]
path = "../wpdev_core"

[dependencies]
clap = "4.4.10"
anyhow = "1.0.75"
log = "0.4.20"
bollard = "0.16.0"
serde_json = "1.0.108"
prettytable-rs = "0.10.0"
spinners = "4.1.1"
tokio = "1.36.0"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
