[package]
name = "wpdev_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.10"
config = "0.13.4"
dirs = "5.0.1"
futures = "0.3.29"
log = "0.4.20"
rocket = {version = "0.5.0", features = ["json"]}
serde = "1.0.193"
serde_json = "1.0.108"
shiplift = "0.7.0"
tokio = "1.34.0"
toml = "0.8.8"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
