[package]
name = "wpdev_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wpdev_core"

[dependencies]
anyhow = "1.0.75"
config = "0.13.4"
dirs = "5.0.1"
futures = "0.3.29"
log = "0.4.20"
prettytable = "0.10.0"
rocket = {version = "0.5.0", features = ["json"]}
serde = "1.0.193"
serde_json = "1.0.108"
shiplift = "0.7.0"
spinners = "4.1.1"
tokio = "1.34.0"
toml = "0.8.8"

