[package]
name = "wpdev_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
anyhow = "1.0.81"
rust-embed = "8.3.0"
serde = {version = "1.0.197", features = ["derive"]}
tera = "1.19.1"
