[package]
name = "wpdev_frontend"
version = "0.1.0"
edition = "2021"

[dependencies.wpdev_core]
path = "../wpdev_core"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
anyhow = "1.0.81"
bollard = "0.16.0"
rust-embed = "8.3.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tera = "1.19.1"
uuid = "1.7.0"
